# csiro-sar-exploration

./: .gitignore  ASF_ViewAustralian_S1GRD.ipynb  Dockerfile  E84_ViewAustralian_S1GRD.ipynb  MSPC_ViewAustralian_S1GRD.ipynb  README.md  S1_Mosaic_Notebook.ipynb  S1_Mosaic_STAC_Load.ipynb  S1_Mosaic_STAC_Profile.ipynb  pyproject.toml  requirements.txt  requirements.txt.in  utils.py
.github/workflows/: build-docker.yaml
argo/: readme.md  stats-s1-geomad-10m.yaml  stats-s1-geomad-ONE.yaml  stats-s1-geomad-all.yaml  stats-s1-geomad-single.yaml  stats-s1-geomad-year.yaml  stats-s1-geomad.yaml  stats-s1-geomad_TEST.yaml
availability_audit/: ASF_ViewAustralian_S1GRD.ipynb  COP_ViewAustralian_S1GRD.ipynb  E84_ViewAustralian_S1GRD.ipynb  MSPC_STAC_ViewAustralian_S1GRD.ipynb  MSPC_ViewAustralian_S1GRD.ipynb  australia.geojson  readme.md  utils.py
datacube/: Makefile  csiro_s1_geomad.product-definition.yaml  docker-compose.yaml  readme.md
datacube/ows_config/: ows.py
datacube/ows_config/sar/: mosaic.py
mosaic_stats/: Makefile  config.yaml  docker-compose.yaml  s1_mosaic_plugin.py
s1_geomad/: Makefile  config.yaml  plugin.py  readme.md
sarsen/: Makefile  Prepare_and_Run_Sarsen.ipynb
